kubernetes/namespace/app/traefik/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: app
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "authsecret"
spec:
  rules:
    - host: traefik.bitmemo.io
      http:
        paths:
          - backend:
              serviceName: traefik-ingress-service
              servicePort: 8080
  tls:
    - secretName: certificate-secret
      hosts:
        - traefik-ui.bitmemo.io
