kubernetes/namespace/app/traefik/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: app
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik-ui.bitmemo.io
      http:
        paths:
          - backend:
              serviceName: traefik-web-ui
              servicePort: 80
  tls:
    - secretName: certificate-secret
      hosts:
        - traefik-ui.bitmemo.io
